# optframe

src/MyProjects/: .gitignore  CMakeLists.txt  NPP.h  mainNPP-task.cpp  mainNPP.cpp  makefile
src/MyProjects/NPP/: CMakeLists.txt  ConstructiveGreedy.h  ConstructiveRand.cpp  ConstructiveRand.h  Evaluator.cpp  Evaluator.h  NSSeq2Opt.h  NSSeqBitFlip.cpp  NSSeqBitFlip.h  NSSeqNBitFlip.cpp  NSSeqNBitFlip.h  NSSeqSwap.h  ProblemInstance.h  Representation.h  SolvingMethod.cpp  SolvingMethod.h
src/MyProjects/input/: generate_input.py  generate_input.sh  result-alpha098_SAmax100_Ti900.csv  result.csv  result.py  result_max-alpha098_SAMax100_Ti900_10.csv  result_min-alpha098_SAMax100_Ti900_10.csv  teste-maratona-10000.txt
src/OptFrame/: Constructive.hpp
src/OptFrame/Heuristics/SA/: BasicSimulatedAnnealing.hpp
