cmake_minimum_required(VERSION 3.12)
project(npp)

# https://developers.redhat.com/blog/2018/03/21/compiler-and-linker-flags-gcc/
add_definitions(-std=c++17)
add_definitions(-fconcepts)
add_definitions(-fpermissive)
add_definitions(-Wall)
add_definitions(-fasynchronous-unwind-tables)
add_definitions(-pipe)
add_definitions(-Werror=format-security)
add_definitions(-Werror=implicit-function-declaration)
# https://caiorss.github.io/C-Cpp-Notes/compiler-flags-options.html
add_definitions(-Wpedantic)
add_definitions(-W)
add_definitions(-Wconversion)
add_definitions(-Wcast-align)
add_definitions(-Wunused)
add_definitions(-Wshadow)
add_definitions(-Wold-style-cast)
add_definitions(-Wpointer-arith)
add_definitions(-Wcast-qual)
add_definitions(-Wmissing-prototypes)
add_definitions(-Wno-missing-braces)

string(TOLOWER "${CMAKE_BUILD_TYPE}" build_type)
if (build_type STREQUAL "debug")
    message(STATUS "Debug build")
    add_definitions(-g)
    add_definitions(-grecord-gcc-switches)
    add_definitions(-D_GLIBCXX_DEBUG)
    add_definitions(-D_FORTIFY_SOURCE=2)
    add_definitions(-D_GLIBCXX_ASSERTIONS)
else ()
    message(STATUS "Release build")
    add_definitions(-O3)
    add_definitions(-finline-functions)
    add_definitions(-funroll-loops)
    add_definitions(-frecursive)
endif ()

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)
include_directories(..)
add_subdirectory(NPP)

add_library(scanner ../OptFrame/Scanner++/Scanner.cpp)

set(SOURCE_FILES mainNPP.cpp)
add_executable(app_NPP ${SOURCE_FILES})
target_link_libraries(app_NPP npp)
target_link_libraries(app_NPP scanner)
target_link_libraries(app_NPP Threads::Threads)

add_executable(app_NPP_task mainNPP-task.cpp)
target_link_libraries(app_NPP_task npp)
target_link_libraries(app_NPP_task scanner)
target_link_libraries(app_NPP_task Threads::Threads)
